fixed spacing in comment not allowed bugs

--- a/src/app/videoPlayer.css
+++ b/src/app/videoPlayer.css
@@ -542,7 +542,7 @@
   .settings-wrapper {
     position: absolute;
     width: 60%;
-    bottom: 30px;
+    bottom: 40px;
     right: 2%;
     top: unset;
     /* background-color: rgba(0, 0, 0, 0.9); */
